--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<!-- NG-ZORRO -->
+<!-- NG-ZORRO 
 <a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
   <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+</a>-->
+<div style="border: 1px solid black" class="gridContainer">
+<header style="border: 1px solid black" class="header">{{title}}</header>
+<section style="border: 1px solid black" class="listContainer">car list</section>
+<section style="border: 1px solid black" class="fromContainer">form box</section>
+<section style="border: 1px solid black" class="carContainer">car box</section>
+<footer style="border: 1px solid black" class="footer">footer area</footer>
+</div>
