imm folder added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 </a>-->
 <div style="border: 1px solid black" class="gridContainer">
 <header style="border: 1px solid black" class="header">{{title}}</header>
-<section style="border: 1px solid black" class="listContainer">car list</section>
+<nav style="border: 1px solid black" class="listContainer">car list</nav>
 <section style="border: 1px solid black" class="fromContainer">form box</section>
 <section style="border: 1px solid black" class="carContainer">car box</section>
-<footer style="border: 1px solid black" class="footer">footer area</footer>
+<footer style="border: 1px solid black" class="footer">footer</footer>
 </div>
