--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 </a>-->
 <div style="border: 1px solid black" class="gridContainer">
 <header style="border: 1px solid black" class="header">{{title}}</header>
-<nav style="border: 1px solid black" class="listContainer">car list</nav>
+<nav style="border: 1px solid black" class="listContainer">
+<app-cars-list></app-cars-list>
+</nav>
 <section style="border: 1px solid black" class="fromContainer">form box</section>
 <section style="border: 1px solid black" class="carContainer">car box</section>
 <footer style="border: 1px solid black" class="footer">footer</footer>
