--- a/src/app/cars-list/cars-list.component.html
+++ b/src/app/cars-list/cars-list.component.html
@@ -1,3 +1,5 @@
+<button>new car</button>
+
 <nz-list>
   <nz-list-item *ngFor="let car of cars" >{{car.brand}}, Model: {{car.model}}</nz-list-item>
 </nz-list>
