--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav style="border: 1px solid black" class="listContainer">
 <app-cars-list [cars]="cars"></app-cars-list>
 </nav>
-<section style="border: 1px solid black" class="fromContainer">form box</section>
+<div style="border: 1px solid black" class="fromContainer">form box</div>
 <section style="border: 1px solid black" class="carContainer">car box</section>
 <footer style="border: 1px solid black" class="footer">footer</footer>
 </div>
